# btfranklin

./: .gitignore  AGENTS.md  CNAME  README.md  UPDATING_PROJECTS.md  eleventy.config.mjs  input.css  integrated-ai-privacy.md  package-lock.json  package.json  sitemap.txt  tailwind.config.js
.cursor/rules/: styling.mdc
docs/: about.html  api-architect.html  art-genre-innovator.html  cheat-sheets.html  circuits.js  creations.html  django-cli-commands.html  django-djenius.html  django-project-structure.html  django-step-by-step.html  ether-guide.html  experiments.html  gpts.html  index.html  integrated-ai-privacy.md  llms-txt.html  llms.txt  notes.html  projects.html  serverless-sage.html  sitemap.txt  styles.min.css  tailwind-template-designer.html  web-toys.html
docs/about/: index.html
docs/cheat-sheets/: django-cli-commands.html  django-project-structure.html  django-step-by-step.html  index.html
docs/creations/: index.html
docs/downloads/: bt-franklin-resume-application.docx  bt-franklin-resume-full.docx  bt-franklin-resume.docx
docs/gpts/: api-architect.html  art-genre-innovator.html  django-djenius.html  ether-guide.html  htmx-hypergenius.html  index.html  serverless-sage.html  tailwind-template-designer.html
docs/notes/: index.html
docs/resume/: index.html
resume/: AGENTS.md  README.md  pyproject.toml  source.md
resume/scripts/: build_resume.py
resume/variants/: application.md
scripts/: build.mjs  validate-site.mjs
site/: README.md  index.njk  llms.txt.njk  sitemap.txt.njk
tailwind/: package-lock.json  package.json  tailwind.config.js
(+61 files in other folders)
